--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,9 @@ body{
   .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 40%;
+    margin: auto;
+    width: 60%;
+  padding: 10px;
   }
   
   .card:hover {
